# thallo

./: .gitignore  README.md  calendar_test.py  main.py  mutt_oauth2.py  pyproject.toml
thallo/: auth.py  calendar.py  format.py  main.py  utils.py
